[Elevation] started to rename altitude with elevation but there are too many locations to do it everywhere, it's renamed in already modified files for the next version